# docserver

./: .gitignore  PACKAGING.md  README.md  THEME-PALETTES.md  build.bat  build.sh  docserver-cli.spec  example.bat  example.sh  index.md  pack.bat  pack.sh  package-lock.json  package.json  project.yaml  pyproject.toml  run-lifecycle.ps1  run.bat  run.sh  test.bat  update.bat
.cursor/skills/project-changelog/: SKILL.md
.cursor/skills/project-design-notes/: SKILL.md
.cursor/skills/project-preload-skills/: SKILL.md
.github/workflows/: release.yml
.vitepress/: config.mts
demo/: index.md  more.md
docserver.egg-info/: PKG-INFO  SOURCES.txt
example/source/: README.md
example/source/guides/: install.md
example/source/reference/: glossary.md  index.md
example/source/showcase/: index.md  (+4 more)
guides/: install.md
guides/advanced/: config.md
src/: __main__.py  build_site.py  entries.py  mkdocs_config.py  pages.py  paths.py  process_priority.py  project_config.py  publish.py  scan.py  session_log.py  sidebar.py  staging.py  sync.py  theme_assets.py  watch.py
tests/: test_sync.py
theme/: docserver-base.css  github.css
theme/javascripts/: docserver-boot.js  mermaid-init.js  nav-active-branch.js  nav-filter.js  path-index.js  sidebar-scroll-persist.js  theme-switcher.js
theme/palettes/: c-teal.css  i-github.css  j-github.css  k-grey.css  l-black-blue.css
tools/: README.md  bundle_release.py  ci_pack_ubuntu16.sh  fetch-vendor.bat  fetch-vendor.sh  offline-package-readme.txt  pack.bat  pack.sh  run_frozen_example.py  stage-offline.bat  stage-offline.sh
(+2 files in other folders)
