[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docserver"
version = "0.1.0"
description = "将多层 Markdown 文档目录构建为可部署的静态站点"
requires-python = ">=3.10"
dependencies = [
  "mkdocs-material>=9.5.0",
  "mkdocs-awesome-pages-plugin>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = []
